--- a/templates/dymo-other-templates.xml
+++ b/templates/dymo-other-templates.xml
@@ -50,7 +50,17 @@
       <Layout nx="1" ny="1" x0="0pt" y0="0pt" dx="19mm" dy="51mm"/>
     </Label-rectangle>
   </Template>
-
+  
+  <!-- =================================================================== -->
+  <!-- Dymo 11355 Name Badge labels.                                   -->
+  <!-- =================================================================== -->
+  <Template brand="Dymo" part="11356" size="Other" width="89mm" height="41mm" description="Name Badge">
+    <Label-rectangle id="0" width="89mm" height="41mm" round="0mm" x_waste="0mm" y_waste="0mm">
+      <Markup-margin size="0mm"/>
+      <Layout nx="1" ny="1" x0="0mm" y0="0mm" dx="89mm" dy="41mm"/>
+    </Label-rectangle>
+  </Template>
+  
   <!-- =================================================================== -->
   <!-- Dymo 30256 Address labels.                                          -->
   <!-- =================================================================== -->
@@ -61,7 +71,7 @@
       <Markup-margin size="0pt"/>
       <Layout nx="1" ny="1" x0="0pt" y0="0pt" dx="59mm" dy="102mm"/>
     </Label-rectangle>
-  </Template>   
+  </Template>
   
   <!-- =================================================================== -->
   <!-- Dymo 30327 File Folder labels.                                      -->
